# euchre_engine

./: .gitignore  clean.py  dev.py  pyproject.toml  pytest.ini  readme.md  runner.py
bots/: base.py  random_bot.py  rule_bot.py
euchre_core/: Deck.py  EuchreEngine.py  EuchreError.py  Game.py  __init__.py  cards.py  compare_cards.py  util.py
examples/: debug.py  dev.py
src/euchre_core/: CardTable.py  Deck.py  EuchreEngine.py  EuchreError.py  Game.py  __init__.py  cards.py
src/euchre_core/euchre_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: FakeEngine.py  test_card_table.py  test_cards.py  test_deck.py  test_euchre_engine.py
