[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euchre_core"
version = "1.0.0"
description = "Core Euchre game engine"
authors = [{ name = "Ed Armstrong", email = "ed@frar.ca" }]
readme = "README.md"
dependencies = []
license = { text = "MIT" }
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pylint", "pytest", "pdoc", "coverage"]

[tool.setuptools]
package-dir = {"" = "src"}  # <-- tell setuptools where code lives

[tool.setuptools.packages.find]
where = ["src"]              # <-- search under src/
include = ["euchre_core*"]   # (optional but nice)

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "^class .*Error",
    "^class .*Exception"
]

[tool.coverage.run]
omit = ["tests/*"]

[clean]
paths = [
  "build",
  "dist",
  "*.egg-info",
  "**/__pycache__",
  ".coverage",
  "htmlcov",
  ".pytest_cache"
]